# CC232-2026

./: .gitignore  Guia_curso_CC232.md  README.md
ExamenParcial/: Respuestas.md
Libreria_cc232/: CMakeLists.txt
Libreria_cc232/Semana1/: Actividad1-CC232.md  CMakeLists.txt  Ejercicios1-CC232.md  README.md  Respuestas1-CC232.md  Resumen_Semana1.md
Libreria_cc232/Semana2/: Actividad2-CC232.md  CMakeLists.txt  Ejercicios2-CC232.md  README.md  Respuestas2-CC232.md  Resumen_Semana2.md
Libreria_cc232/Semana3/: Actividad3-CC232.md  CMakeLists.txt  Ejercicios3-CC232.md  README.md  Respuestas3-CC232.md
Libreria_cc232/Semana4/: Actividad4-CC232.md  CMakeLists.txt  Ejercicios4-CC232.md  README.md
Libreria_cc232/Semana5/latorre_brian_pc2/: CMakeLists.txt  MyREADME.md  README.md
Libreria_cc232/Semana5/latorre_brian_pc2/benchmark/: benchmark_histogram.cpp
Libreria_cc232/Semana5/latorre_brian_pc2/demos/: demo_largest_rectangle.cpp  demo_largest_rectangle_bruteforce.cpp
Libreria_cc232/Semana5/latorre_brian_pc2/include/: largest_rectangle.h
Libreria_cc232/Semana5/latorre_brian_pc2/src/: largest_rectangle.cpp
Libreria_cc232/Semana5/latorre_brian_pc2/video/: VideoFinal.md
Semana0/: Ejercicios0.md  INSTRUCCIONES_Ejercicios0_v4.2.md  Pruebas_Unitarias.md  resolver_ejercicios0_v4.2.sh  stl_optimizacion_demostracion.cpp
Semana2/: Respuestas2-CC232.md
Semana4/: Respuestas4-CC232.md
Semana5/: Respuestas5-CC232.md
Semana6/: Respuestas6-CC232.md
Semana7/: Respuestas7-CC232.md
Semana8/: Respuestas8-CC232.md
UltimaSemana/: ProblemaAsignado.md
(+167 files in other folders)
